@@ -2222,7 +2222,7 @@ BlockExpList : Expression                  { pBlockSimple = $1;   $$ = hb_compEx
  */
 
 BlockVarList : IdentName AsType                   { hb_comp_iVarScope = VS_LOCAL; $$ = hb_compExprCBVarAdd( $<asExpr>0, $1,    hb_comp_cVarType ); hb_comp_cVarType = ' '; }
-             |                                    { hb_comp_iVarScope = VS_LOCAL; $$ = hb_compExprCBVarAdd( $<asExpr>0, NULL , hb_comp_cVarType ); hb_comp_cVarType = ' '; }
+             |                                    { hb_comp_iVarScope = VS_LOCAL; $$ = hb_compExprCBVarAdd( $<asExpr>0, NULL , hb_comp_cVarType ); asExpr = $$;hb_comp_cVarType = ' '; }
              | BlockVarList ',' IdentName AsType  { hb_comp_iVarScope = VS_LOCAL; $$ = hb_compExprCBVarAdd( $1, $3,    hb_comp_cVarType ); hb_comp_cVarType = ' '; }
              | BlockVarList ','                   { hb_comp_iVarScope = VS_LOCAL; $$ = hb_compExprCBVarAdd( $1, NULL,  hb_comp_cVarType ); hb_comp_cVarType = ' '; }
              ;
@@ -4349,8 +4349,19 @@ static void hb_compYYError( char cPrefix, int iError, const char * szError1, con
 {
    hb_compGenError( hb_comp_szErrors, cPrefix, iError, szError1, szError2 );
 
+#if 0
+
+   if ( asExpr && asExpr->value.asList.pIndex )
+   {
+      hb_xfree( asExpr->value.asList.pIndex );
+      asExpr->value.asList.pIndex = NULL;
+   }
+
    if ( asExpr )
+   {
       hb_xfree( asExpr );
+      asExpr = NULL;
+   }
 
    if( hb_comp_LocalParams )
    {
@@ -4361,8 +4372,14 @@ static void hb_compYYError( char cPrefix, int iError, const char * szError1, con
          hb_comp_LocalParams = hb_comp_LocalParams->pNext;
          hb_xfree( (void *) pDelete );
       }
+      hb_comp_LocalParams = NULL;
    }
 
    if( hb_comp_BlocksList )
+   {
       hb_xfree( hb_comp_BlocksList );
+      hb_comp_BlocksList = NULL;
+   }
+
+#endif
 }
