@@ -8,6 +8,12 @@
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+2012-11-14 11:51 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
+  * source/compiler/harbour.sly
+  * source/compiler/harbouryy.c
+    ! deffed out cleanups routines. Looks like wrong implementation which
+    cause double freeing in some cases, causing GPF on wrong codes.
+
 2012-11-13 21:58 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
   * source/compiler/harbour.c
     ! recent changes cause module without "MAIN" does not execute, fixed.
